# hf-serve

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build-image.yml  lint.yml  pylint.yml
benchmark/: locustfile.py
hf_serve/: config.py  main.py  serving_fastapi.py  serving_redis.py  serving_starlette.py  settings.py
hf_serve/payloads/: __init__.py  request_payloads.py  response_payloads.py  text_classification_payload.py
hf_serve/routers/: __init__.py  inference.py
k8s/: classification-deployment-cpu.yaml  classification-deployment.yaml  knative-service.yaml
templates/: classification-deployment.yaml
tests/: test_classification_pipeline.py
