[tool.poetry]
name = "hf-serve"
version = "0.1.0"
description = "A simple project to use Huggingface models as a service. And a benchmark with locust around it."
authors = ["Haoxian WANG"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hf_serve" }]

[tool.poetry.dependencies]
python = "^3.9"
aioredis = "^2.0.0"
fastapi = "^0.95.0"
transformers = "^4.30.2"
torch = "^1.9.0"
starlette = "^0.26.1"
uvicorn = "^0.21.1"
locust = "^2.15.1"
prometheus_fastapi_instrumentator = "^6.0.0"
loguru = "^0.7.0"
prometheus-client = "^0.8.0"
numpy = "^1.21.0"
dynaconf = "^3.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pylint = "^2.17.2"
pytest = "^7.3.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>1.4"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "too-few-public-methods",
]
extension-pkg-whitelist=["pydantic"]

[tool.pylint.BASIC]
good-names = ["a", "b", "c", "d", "e", "df", "i", "logger", "n", "tz", "pipe"]